# bayes_id

./: README.md  gibbs.py  model.py  requirements.txt
data/: gibbs_traj.npz  gibbs_traj_diffstart.npz  gibbs_traj_iter10000.npz  gibbs_traj_iter10000_thetafix.npz  saved_traj.npz
traj_collector/: package.xml  setup.cfg  setup.py
traj_collector/traj_collector/: collector.py
